# sigma-wasm

./: AGENTS.md  Cargo.toml  Dockerfile  FULLSTACK_RUST_FOR_SIGMAS.md  LEARN_FROM_MISTAKES.md  index.html  nginx.conf.template  package.json  render.yaml  vite.config.ts
pages/: babylon-mandelbulb.html  fractal-zoom.html  hello-wasm.html
scripts/: build-wasm.sh  build.sh
src/: lib.rs  main.ts  styles.css  types.ts
src/routes/: astar.ts  babylon-chunks.ts  babylon-mandelbulb.ts  fractal-zoom.ts  function-calling.ts  hello-wasm.ts  image-captioning.ts  preprocess-smolvlm-256m.ts  preprocess-smolvlm-500m.ts
wasm-babylon-mandelbulb/: Cargo.toml
wasm-babylon-mandelbulb/src/: lib.rs
wasm-fractal-zoom/: Cargo.toml
wasm-fractal-zoom/src/: lib.rs
wasm-hello/src/: lib.rs
